feat: test gen api
